Moving dark mode toggle to separate component, dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 5, 5, 5;
   --background-rgb: 255, 255, 255;
 }
 
-[data-theme='dark'] {
+[class='dark'] {
   --foreground-rgb: 255, 255, 255;
   --background-rgb: 5, 5, 5;
 }
@@ -22,12 +22,14 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
-  min-width: 100vh;
-  min-height: 100vh;
+  max-width: 100vw;
+  max-width: 100dvw;
+  max-height: 100vh;
+  max-height: 100dvh;
 }
 
-@layer utilities {
+/* @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
